--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@fullhuman/postcss-purgecss": "^3.1.3",
     "@gridsome/source-filesystem": "^0.6.2",
-    "@gridsome/transformer-remark": "^0.6.2",
-    "gridsome": "^0.7.20",
+    "@gridsome/transformer-remark": "^0.6.4",
+    "gridsome": "^0.7.23",
     "gridsome-source-static-meta": "github:noxify/gridsome-source-static-meta#master",
-    "sass": "^1.26.10",
+    "sass": "^1.32.0",
+    "postcss-nested": "^5.0.3",
+    "prism-themes": "^1.5.0",
+    "sass-loader": "^10.1.0",
+    "postcss": "^8.2.2",
+    "autoprefixer": "^9.8.6",
+    "postcss-preset-env": "^6.7.0",
     "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.2.3",
-    "prism-themes": "^1.4.0",
-    "sass-loader": "^10.0.2"
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "gridsome-plugin-tailwindcss": "^3.0.1"
+    "gridsome-plugin-tailwindcss": "^4.1.1"
   }
 }
